<resources>
    <string name="app_name">asingtesting</string>
    <string name="company_header">Company Register</string>
    <string name="Company_Name_Label">Company Name :</string>
    <string name="Company_Name_Hint">e.g.Watsoon</string>
    <string name="Company_Address_Label">Company Address :</string>
    <string name="Company_Address_txt">No 33, Jalan Parit Besar</string>
    <string name="Company_Poscode_Label">Poscode :</string>
    <string name="Poscode_Hint">e.g.53300</string>
    <string name="Company_Type_Label">Company Type :</string>
    <string name="Company_Type_Hint">e.g.comestic</string>
    <string name="Company_Email_Label">Company Email :</string>
    <string name="Company_Operating_Hour_Label">Company Operating Hour :</string>
    <string name="Company_Working_Date_Label">Company Working Date :</string>
    <string name="Company_Email_Hint">e.g.limahkau@gmail.com</string>
    <string name="Company_Operating_Hour_HInt">e.g.8.00 a.m.~8.00 p.m.</string>
    <string name="Company_Working_Date_Hint">e.g.monday~friday</string>
    <string name="myProfileText">my profile</string>
    <string name="orderHistoryText">order history</string>
    <string name="registerForBuinessText">register for business</string>
    <string name="aboutUsText">about us</string>
    <string name="customerServicesText">customer services</string>
    <string name="homeText">home</string>
    <string name="Divider">___________________________________________________________________</string>
    <string name="invalid_name">Please Enter Valid Name</string>
    <string name="invalid_email">Please Enter Valid Email</string>
    <string name="invalid_Email_Address">Please Enter Valid Email Address</string>
    <string name="invalid_poscode">Please Enter Valid Poscode</string>
    <string name="invalid_company_type">Please Enter Valid Company Type</string>
    <string name="Insert_Photo">Please Insert Your Photo</string>
    <string name="Company_Register">Register</string>
    <string name="phoneNumber">Phone Number</string>
    <string name="confirmPassword">Confirm Password</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="verification_code">Verification Code</string>
    <string name="Email">Email</string>
    <string name="log_out">Log Out</string>
    <string name="product_name">Set Product Name</string>
    <string name="button_upload">Upload To Server</string>
    <string name="button_done">Done</string>
    <string name="RM">RM:</string>
    <string name="aboutus"><b><u>About Us</u></b></string>
    <string name="contactus"><b><u>Contact Us</u></b></string>
</resources>