<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#87CEEB"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/Company_Name_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:background="@android:color/white"
        android:fontFamily="@font/alice"
        android:text="@string/Company_Name_Label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/please_insert_picture_label" />

    <EditText
        android:id="@+id/company_name_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Company_Name_Hint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/Company_Name_Label"
        app:layout_constraintStart_toEndOf="@+id/Company_Name_Label" />

    <TextView
        android:id="@+id/Company_Address_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/alice"
        android:text="@string/Company_Address_Label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Company_Name_Label" />

    <TextView
        android:id="@+id/Company_Poscode_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/alice"
        android:text="@string/Company_Poscode_Label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Company_Address_Label" />

    <TextView
        android:id="@+id/Company_Type_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/alice"
        android:text="@string/Company_Type_Label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Company_Poscode_Label" />

    <TextView
        android:id="@+id/Company_Email_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/alice"
        android:text="@string/Company_Email_Label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Company_Type_Label" />

    <EditText
        android:id="@+id/company_address_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Company_Address_txt"
        android:inputType="textPostalAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/Company_Address_Label"
        app:layout_constraintStart_toEndOf="@+id/Company_Address_Label" />

    <EditText
        android:id="@+id/poscode_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Poscode_Hint"
        android:inputType="number"
        app:layout_constraintBaseline_toBaselineOf="@+id/Company_Poscode_Label"
        app:layout_constraintStart_toEndOf="@+id/Company_Poscode_Label" />

    <EditText
        android:id="@+id/company_type_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Company_Type_Hint"
        android:inputType="textPersonName"
        app:layout_constraintBaseline_toBaselineOf="@+id/Company_Type_Label"
        app:layout_constraintStart_toEndOf="@+id/Company_Type_Label" />

    <TextView
        android:id="@+id/Company_Oprating_Hour_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/alice"
        android:text="@string/Company_Operating_Hour_Label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Company_Email_Label" />

    <TextView
        android:id="@+id/Company_Working_Date_Label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFFFFF"
        android:fontFamily="@font/alice"
        android:text="@string/Company_Working_Date_Label"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Company_Oprating_Hour_Label" />

    <EditText
        android:id="@+id/company_Email_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Company_Email_Hint"
        android:inputType="textEmailAddress"
        app:layout_constraintBaseline_toBaselineOf="@+id/Company_Email_Label"
        app:layout_constraintStart_toEndOf="@+id/Company_Email_Label" />

    <EditText
        android:id="@+id/Company_Operating_Hour_txt"
        android:layout_width="193dp"
        android:layout_height="50dp"
        android:layout_marginStart="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Company_Operating_Hour_HInt"
        android:inputType="phone|time"
        app:layout_constraintBaseline_toBaselineOf="@+id/Company_Oprating_Hour_Label"
        app:layout_constraintStart_toEndOf="@+id/Company_Oprating_Hour_Label" />

    <EditText
        android:id="@+id/company_working_date_txt"
        android:layout_width="197dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/Company_Working_Date_Hint"
        android:inputType="date|number|datetime|phone|time"
        app:layout_constraintBaseline_toBaselineOf="@+id/Company_Working_Date_Label"
        app:layout_constraintStart_toEndOf="@+id/Company_Working_Date_Label" />

    <Button
        android:id="@+id/Register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#FFFF00"
        android:gravity="center"
        android:text="@string/Company_Register"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Company_Working_Date_Label" />

    <ImageView
        android:id="@+id/Company_Logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/please_insert_picture_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Please Insert Gompany Logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Company_Logo" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#1ABC9C"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/button"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="1dp"
            android:background="@drawable/my_profile"
            android:onClick="myprofile"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button2"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="1dp"
            android:background="@drawable/order_history"
            android:onClick="orderhistory"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button" />

        <Button
            android:id="@+id/button3"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="1dp"
            android:background="@drawable/regi_for_busi"
            android:onClick="registerbusiness"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="1dp"
            android:background="@drawable/about_us"
            android:onClick="aboutus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button3" />

        <Button
            android:id="@+id/button5"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_marginStart="1dp"
            android:background="@drawable/help"
            android:onClick="customerservices"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button4" />

        <Button
            android:id="@+id/button6"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:background="@drawable/home"
            android:onClick="home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/button5" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>